# yy-xiangqi

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-app.yml  release-models.yml
backend/: README.md  app.py  requirements-train.txt  requirements.txt
backend/models/: README.md  board_locator.onnx  labels.txt  piece_classifier.onnx
backend/recognizer/: __init__.py  classify.py  fen.py  locate.py  locate_model.py  model_io.py  model_store.py  model_update.py  pipeline.py  slice.py
backend/tests/: synth.py  test_fen.py  test_pipeline.py
backend/tools/: check_model.py  extract_crops.py  gen_locate_data.py  gen_training_data.py  train_classifier.py  train_locator.py
docs/: OCR与桌面端技术选型分析.md  development.md  release.md
docs/samples/: README.md
public/stockfish/: engine-worker.js
scripts/: build-release-local.sh  build-sidecar.sh  bump-version.mjs  dev-all.mjs  local-release-env.example.sh  prepare-tauri-release.mjs  setup.mjs  smoke.mjs  sync-version.mjs  write-models-manifest.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: engine.ts  index.ts  use-ai-engine.ts
src/composables/: use-model-update.ts
src/engine/: fen.ts  index.ts  legal.ts
src/lib/: konva.ts
src/stores/: editor.ts  game.ts  training-sample.ts  (+1 more)
(+24 files in other folders)
