[package]
name = "xiangqi-endgame"
version = "0.2.0"
description = "Xiangqi endgame helper"
authors = ["agan"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "xiangqi_endgame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.150"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
